--- a/package.json
+++ b/package.json
@@ -13,14 +13,20 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
+    "nodemailer": "^7.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.5.3",
+    "vite-plugin-rewrite-all": "^1.0.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
