--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-router-dom": "^7.5.3",
+    "react-toastify": "^11.0.5",
+    "styled-components": "^6.1.18",
     "vite-plugin-rewrite-all": "^1.0.2",
     "zod": "^3.24.3"
   },
@@ -29,6 +31,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/styled-components": "^5.1.34",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
